Agregue PDF con historia de Google

--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
     
     <h2>Vas a descubrir lo que hay detras de la empresa más grande del mundoo</h2>
     
-    <a href="www.google.com"><img src="/img/google.jpg" alt="Esta es la imagen de Google" width="300"></a>
+    <a href="www.google.com"><img src="/img/google.jpg" alt="Esta es la imagen de Google" width="200"></a>
     
     <p>La historia de Google comienza en 1995, en la Universidad de Stanford. Larry Page se estaba planteando estudiar en Stanford y Sergey Brin, que ya estudiaba allí, fue el encargado de mostrarle el campus. ... Este motor de búsqueda se llamó Backrub. Poco después, Backrub pasó a llamarse Google</p>
 
@@ -29,5 +29,7 @@
         <li>Android</li>
         <li><a href="www.gmail.com">Gmail</a> </li>
     </ol>
+
+    <h4><a href="/pdf/google.pdf">Descargar historia de Google</a></h4>
 </body>
 </html>
